# CProgramming_MyBuilding

./: CMakeLists.txt  File  LAND_INFO  LAND_POS_INFO  Mybuilding.sln  Mybuilding.vcxproj  Mybuilding.vcxproj.filters  Prototype.c  README.md  cycle.c  cycle.h  ending.c  ending.h  ending_credit.txt  ending_file.c  ending_file.h  file.c  file.h  func.c  func.h  gotoyx.c  gotoyx.h  intro_1.c  intro_1.h  land.c  land.h  main.c  minesweeper.c  minigame.c  minigame.h  money.c  money.h  player.c  player.h  random.c  random.h  release.c  release.h  resident.c  resident.h  (+3 more)
Debug/: LAND_INFO  LAND_POS_INFO  Mybuilding.ilk
Debug/Building.tlog/: Building.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Debug/Mybuilding.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Mybuilding.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Desktop/mentormanager/: build.gradle  settings.gradle
Desktop/mentormanager/src/main/java/com/beautifullearning/mentormanager/: MentormanagerApplication.java  ServletInitializer.java
Desktop/mentormanager/src/main/resources/: application.properties
Desktop/mentormanager/src/test/java/com/beautifullearning/mentormanager/: MentormanagerApplicationTests.java
Release/Building.tlog/: Building.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Release/Mybuilding.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Mybuilding.lastbuildstate
data/: GoOrStopMenu.txt  HeadOrTailCoinAnimation.txt  HeadOrTailSystemMenu.txt  LAND_INFO  LAND_POS_INFO  README.md  SetBetMenu.txt  ending_credit.txt  x_pos.txt
header_files/: basic_const.h  class.h  cycle.h  ending.h  file.h  func.h  gotoyx.h  intro_1.h  land.h  maingame.h  minigame.h  minigamegotoyx.h  money.h  player.h  random.h  resident.h  show.h
minigame/: HeadOrTailCoinAnimation.txt  SetBetMenu.txt  class.c  class.h  maingame.c  maingame.h  minigamegotoyx.c  minigamegotoyx.h
source_files/: class.c  cycle.c  ending.c  ending_file.c  file.c  func.c  gotoyx.c  intro_1.c  land.c  main.c  maingame.c  minigame.c  minigamegotoyx.c  money.c  player.c  random.c  release.c  resident.c  show.c
x64/Debug/: Mybuilding.ilk  vc142.idb
x64/Debug/Mybuilding.tlog/: CL.command.1.tlog  CL.write.1.tlog  Mybuilding.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
