cmake_minimum_required(VERSION 3.15)
project(CProgramming_MyBuilding)
set(CMAKE_CXX_STANDARD )

add_executable(CProgramming_MyBuilding
        cycle.c
        cycle.h
        file.c
        file.h
        gotoyx.c
        gotoyx.h
        land.h
        main.c
        minigame.c
        minigame.h
        money.c
        money.h
        player.c
        player.h
        random.c
        random.h
        resident.c
        resident.h
        show.c
        show.h
        land.c

        intro_1.c
        intro_1.h
        ending.c
        ending.h
        ending_file.c
        ending_file.h
        func.c
        func.h)